[tool.black]
line-length = 99
include = ".pyi?$"
force-exclude = ".*/migrations/.*"

[tool.isort]
force_grid_wrap = 2
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.poetry]
name = "healthchecks-io-proxy"
version = "0.1.0"
description = ""
authors = ["Denis Sumin <da.sumin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
httpx = "^0.26.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
